Mensajes de error

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
 		</main>
 		<section class="container">
 			<h2 id="titulo-form">Adicionar nuevo paciente</h2>
+			<ul id="mensajes-errores"></ul>
+
 			<form id="form-adicionar">
 				<div class="grupo">
 					<label for="nombre">Nombre:</label>
@@ -99,5 +101,6 @@
 		</section>
 		<script src="/js/calcular-imc.js"></script>
 		<script src="/js/form.js"></script>
+		<script src="/js/eliminar-paciente.js"></script>
 	</body>
 </html>
