--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 
 	</head>
 	<body>
-
 		<header>
 			<div class="container">
 				<h1 class="titulo">Buona Vita Nutrición</h1>
 			</div>
-		</header>
+		</header>	
 		<main>
 			<section class="container">
 				<h2>Mis pacientes</h2>
@@ -36,23 +35,20 @@
 							<td class="info-gordura">10</td>
 							<td class="info-imc">0</td>
 						</tr>
-
 						<tr class="paciente" >
 							<td class="info-nombre">Juan</td>
-							<td class="info-peso">80</td>
-							<td class="info-altura">1.72</td>
+							<td class="info-peso">73</td>
+							<td class="info-altura">1.80</td>
 							<td class="info-gordura">40</td>
 							<td class="info-imc">0</td>
 						</tr>
-
 						<tr class="paciente" >
 							<td class="info-nombre">Erica</td>
 							<td class="info-peso">54</td>
-							<td class="info-altura">1.64</td>
+							<td class="info-altura">1.70</td>
 							<td class="info-gordura">14</td>
 							<td class="info-imc">0</td>
 						</tr>
-
 						<tr class="paciente">
 							<td class="info-nombre">Diego</td>
 							<td class="info-peso">85</td>
@@ -67,15 +63,27 @@
 							<td class="info-gordura">19</td>
 							<td class="info-imc">0</td>
 						</tr>
+						<tr class="paciente" >
+							<td class="info-nombre">Pedro</td>
+							<td class="info-peso">70</td>
+							<td class="info-altura">1.68</td>
+							<td class="info-gordura">23</td>
+							<td class="info-imc">0</td>
+						</tr>
+						<tr class="paciente" >
+							<td class="info-nombre">Maria</td>
+							<td class="info-peso">55</td>
+							<td class="info-altura">1.60</td>
+							<td class="info-gordura">17</td>
+							<td class="info-imc">0</td>
+						</tr>
 					</tbody>
 				</table>
-
 			</section>
 		</main>
 		<section class="container">
 			<h2 id="titulo-form">Adicionar nuevo paciente</h2>
 			<ul id="mensajes-errores"></ul>
-
 			<form id="form-adicionar">
 				<div class="grupo">
 					<label for="nombre">Nombre:</label>
@@ -96,11 +104,9 @@
 				<button id="adicionar-paciente" class="boton bto-principal">Adicionar</button>
 			</form>
 		</section>
-		<section>
-			<input class="frase"><button class="boton">Copiar</button><span class="copia"></span>
-		</section>
-		<script src="/js/calcular-imc.js"></script>
-		<script src="/js/form.js"></script>
+		<script src="js/calcular-imc.js"></script>	
+		<script src="js/form.js"></script>	
 		<script src="/js/eliminar-paciente.js"></script>
 	</body>
+
 </html>
